--- a/_posts/2017-01-18-thrift.md
+++ b/_posts/2017-01-18-thrift.md
@@ -16,29 +16,29 @@ comments: true
 
 ##Thrift 是什么？
 
-    Thrift 源于大名鼎鼎的 facebook 之手，在 2007 年 facebook 提交 Apache 基金会将 Thrift 作为一个开源项目,对于当时的 facebook 来说创造 thrift 是为了解决
+Thrift 源于大名鼎鼎的 facebook 之手，在 2007 年 facebook 提交 Apache 基金会将 Thrift 作为一个开源项目,对于当时的 facebook 来说创造 thrift 是为了解决
 facebook 系统中各系统间大数据量的传 输通信以及系统之间语言环境不同需要跨平台的特性。所以 thrift 可以支持多种程序语言,例如: C++, C#, Cocoa, Erlang, Haskell,
 Java, Ocami, Perl, PHP, Python, Ruby, Smalltalk. 在多种不同的语言之间通信 thrift可以作为二进制的高性能的通讯中间件,支持数据(对象)序列化和多种类型的 RPC 服
 务。Thrift 适用于程序对程 序静态的数据交换,需要先确定好他的数据结构,他是完全静态化的,当数据结构发生变化时,必须重新编辑 IDL 文件,代码生成,再编译载入的流程,跟其他 IDL 工具相比较可以视为是 Thrift 的弱项,Thrift 适用于搭建大型数据交换及存储的通用工具,对于大型系统中的内部数据传输相对于 JSON 和 xml 无论在性能、传输大小上有明显的优势。
 
-    Thrift 是 IDL(interface definition language)描述性语言的一个具体实现,关于 IDL的话题我们可以追溯到 CORBA 盛行 1999-2001 年(Common Object Request Broker Architecture/公用对象请求代理体系结构),在 IDL 中我们似乎不会忘记到这几个关键字:module、interface、string、long 和 int,我还记得 IDL 利用 module来创建名称空间,并且准确地映射为 Java 的 package,这些特性几乎和现在 thrift的特性完全相同,所以 thrift 的设计思想和理念绝不是什么从火星来的 new idea,看看在那个 CORBA 盛行的年代人们提出的概念,如图所示 CORBA 请求的各个部分,回头我们再与 thrift 进行对比一下:
+Thrift 是 IDL(interface definition language)描述性语言的一个具体实现,关于 IDL的话题我们可以追溯到 CORBA 盛行 1999-2001 年(Common Object Request Broker Architecture/公用对象请求代理体系结构),在 IDL 中我们似乎不会忘记到这几个关键字:module、interface、string、long 和 int,我还记得 IDL 利用 module来创建名称空间,并且准确地映射为 Java 的 package,这些特性几乎和现在 thrift的特性完全相同,所以 thrift 的设计思想和理念绝不是什么从火星来的 new idea,看看在那个 CORBA 盛行的年代人们提出的概念,如图所示 CORBA 请求的各个部分,回头我们再与 thrift 进行对比一下:
 
-![abc](../images/thrift/thrift_1.png)
+![abc](./images/thrift/thrift_1.png)
 
 ##Thrift 基础架构
 
-    Thrift 是一个服务端和客户端的架构体系,从我个人的感官上来看 Thrift 是一个类似XML-RPC+Java-to- IDL+Serialization Tools=Thrift 的东东,Thrift 具有自己内部
+Thrift 是一个服务端和客户端的架构体系,从我个人的感官上来看 Thrift 是一个类似XML-RPC+Java-to- IDL+Serialization Tools=Thrift 的东东,Thrift 具有自己内部
 定义的传输协议规范(TProtocol)和传输数据标准(TTransports),通过 IDL 脚本对传输数据的数据结构(struct) 和传输数据的业务逻辑(service)根据不同的运行环境快速的
 构建相应的代码,并且通过自己内部的序列化机制对传输的数据进行简化和压缩提高高并发、 大型系统中数据交互的成本,下图描绘了 Thrift 的整体架构,分为 6 个部分:
 
-1. 你的业务逻辑实现(You Code) 
-2. 客户端和服务端对应的 Service 
-3. 执行读写操作的计算结果
-4. TProtocol 
-5. TTransports 
-6. 底层 I/O 通信
+	1. 你的业务逻辑实现(You Code) 
+	2. 客户端和服务端对应的 Service 
+	3. 执行读写操作的计算结果
+	4. TProtocol 
+	5. TTransports 
+	6. 底层 I/O 通信
 
-![abc](../images/thrift/thrift_2.png)
+![abc](./images/thrift/thrift_2.png)
 
 图中前面 3 个部分是 1.你通过 Thrift 脚本文件生成的代码,2.图中的褐色框部分是你根据生成代码构建的客户端和处理器的代码,3.图中红色的部分是 2 端产生的计算结
 果。从 TProtocol 下面 3 个部分是 Thrift 的传输体系和传输协议以及底层 I/O 通信,Thrift 并且提供 堵塞、非阻塞,单线程、多线程的模式运行在服务器上,还可以配合
