--- a/_posts/2017-01-18-thrift.md
+++ b/_posts/2017-01-18-thrift.md
@@ -218,6 +218,10 @@ public class HelloClientDemo {
 
 ```
 
+##ThriftDemo示例下载
+
+[示例源码下载](https://github.com/jianxianwch/MyBlog/blob/gh-pages/code/ThriftDemo.zip?raw=true)
+
 
 
 
